syntax = "proto3";

package protobuf;
option go_package = "./protobuf";
import "Message.proto";

option java_multiple_files = true;
option java_package = "com.joxrays.godroidsvr.resolver";
option java_outer_classname = "CallLogResolverEntry";

service CallLogResolver {
  rpc GetAllCallLogInfo(Empty) returns (CallLogMetaInfoList) {}
  rpc GetCallLogInfo(String) returns (CallLogInfoList) {}
  rpc DeleteCallLog(String) returns (Empty) {}
}
